# hyperwhisper-app

./: .gitignore  .gitmodules  AGENTS.md  README.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  package.json  pnpm-lock.yaml  schema.json
.github/workflows/: cloud-deploy-prod.yml  cloud-deploy-staging.yml  cloud-deploy.yml  macos-release.yml  windows-release.yml
app/macos/: .gitignore  AGENTS.md  ExportOptions.plist  Package.swift  resign_for_notarization.sh  sign_before_archive.sh  sign_whisper_framework.sh  strip_whisper_signatures.sh
app/windows/: .gitattributes  .ui-consistency-sweep.md  AGENTS.md  build-release.ps1  setup-arm64.iss  setup-x64.iss
benchmarks/: .gitignore  README.md  health_check.py  pp_inputs.json  pp_pick_inputs.py  pp_references.json  propose_pp_ratings.py  propose_ratings.py  review.html  run_postprocess_sweep.py  run_transcribe_sweep.py  samples.json  score_pp_results.py  score_results.py  select_samples.py  serve_review.py
fly-log-shipper/: fly.toml
hyperwhisper-cloud/: CLAUDE.md  LICENSE  README.md  fly.dev.toml  fly.staging.toml  package.json  pnpm-lock.yaml
hyperwhisper-cloud/references/: custom-vocab.md
hyperwhisper-cloud/scripts/: smoke-test.ts
hyperwhisper-cloud/src/: index.ts
mintlify-help/: AGENTS.md  advanced-settings.mdx  api-keys.mdx  appearance-settings.mdx  audio-input.mdx  auto-paste.mdx  backup-export-settings.mdx  best-practices.mdx  choosing-a-provider.mdx  cloud-credits.mdx  custom-endpoints.mdx  data-privacy.mdx  developer-mode.mdx  docs.json  file-transcription.mdx  general-settings.mdx  hallucinations.mdx  history.mdx  index.mdx  keep-microphone-warm.mdx  keyboard-shortcuts.mdx  language-detection.mdx  licensing.mdx  local-api.mdx  media-control.mdx  menu-bar.mdx  microphone-selection.mdx  models.mdx  network-filtering.mdx  output-settings.mdx  performance-tips.mdx  permissions.mdx  provider-health.mdx  recording-window.mdx  sound-effects.mdx  streaming-settings.mdx  support.mdx  system-audio.mdx  system-requirements.mdx  transcription-modes.mdx  (+10 more)
mintlify-help/windows/: faq.mdx
nextjs/: .env.example  .gitignore  AGENTS.md  README.md  drizzle.config.ts  eslint.config.mjs  i18n.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  vercel.json
nextjs/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
nextjs/components/: language-switcher.tsx  navbar.tsx  sale-banner.tsx
nextjs/contexts/: DownloadModalContext.tsx  PostHogProvider.tsx
nextjs/drizzle/: 0000_crazy_norrin_radd.sql  0001_swift_black_cat.sql  0002_seed_existing_blog_posts.sql  0003_wakeful_agent_brand.sql  0004_secret_marvel_apes.sql  0005_long_kinsey_walden.sql  0006_fat_husk.sql  0007_friendly_stone_men.sql  0008_fantastic_makkari.sql  0009_tiny_kingpin.sql  0010_amused_black_bird.sql  0011_account_credit_wallet.sql  0012_rename_license_keys_to_account_keys.sql
nextjs/lib/: disposable_domains.ts  rate-limit.ts
nextjs/messages/: AGENTS.md  ar.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  ko.json  lt.json  lv.json  ms.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sr.json  sv.json  th.json  tr.json  uk.json  vi.json  zh-Hant.json  (+1 more)
nextjs/public/: appcast-windows.xml  appcast.xml
nextjs/scripts/: validate-appcast.js  validate-windows-appcast.js
nextjs/styles/: globals.css
nextjs/tests/: credit-purchase-validation.test.ts  download-ip-validation.test.ts  geolocation-ip-validation.test.ts  license-credits-validation.test.ts  license-key-redirect.test.ts
routines/: sentry-autofix.md
shared-app-classification/: AGENTS.md  app-type-catalog.json  cloud-pp-catalog.json  cloud-stt-catalog.json
shared-backup/: AGENTS.md  hyperwhisper-backup.schema.json  validate-fixtures.ps1
shared-backup/examples/: macos-export.hwbackup.json  (+2 more)
shared-core-rs/: .gitignore  Cargo.toml  README.md  build-apple.sh  build-bindings.sh  rust-toolchain.toml
shared-core-rs/bindings/csharp/: hyperwhisper_core.cs
shared-core-rs/bindings/swift/: hyperwhisper_coreFFI.h  hyperwhisper_coreFFI.modulemap
shared-core-rs/crates/hw-backup/: Cargo.toml
shared-core-rs/crates/hw-backup/src/: lib.rs  mapping.rs  migrate.rs  records.rs  validate.rs
shared-core-rs/crates/hw-backup/tests/: golden.rs
shared-core-rs/crates/hw-catalog/: Cargo.toml
shared-core-rs/crates/hw-catalog/src/: app_type.rs  cloud_pp.rs  cloud_stt.rs  lib.rs  models.rs
shared-core-rs/crates/hw-core/: Cargo.toml
shared-core-rs/crates/hw-core/examples/: capture_phonetic.rs
shared-core-rs/crates/hw-core/src/: ffi_backup.rs  ffi_catalog.rs  ffi_license.rs  ffi_net.rs  ffi_prompt.rs  lib.rs
shared-core-rs/crates/hw-core/tests/: golden_phonetic.rs
shared-core-rs/crates/hw-license/: Cargo.toml
shared-core-rs/crates/hw-license/src/: cache.rs  lib.rs  usage.rs  validate.rs
shared-core-rs/crates/hw-license/tests/: golden.rs
shared-core-rs/crates/hw-net/: Cargo.toml
shared-core-rs/crates/hw-net/src/: contract.rs  health.rs  helpers.rs  lib.rs  retry.rs
shared-core-rs/crates/hw-net/src/providers/: assemblyai.rs  azure_mai.rs  common.rs  deepgram.rs  elevenlabs.rs  gemini.rs  google_chirp.rs  grok.rs  groq.rs  hyperwhisper_cloud.rs  mistral.rs  mod.rs  openai.rs  soniox.rs
shared-core-rs/crates/hw-phonetic/: Cargo.toml
shared-core-rs/crates/hw-phonetic/src/: lib.rs
shared-core-rs/crates/hw-text/: Cargo.toml
shared-core-rs/crates/hw-text/src/: autocapitalize.rs  lib.rs  prompt.rs  smart_spacing.rs  tests.rs  text_processing.rs  vocab.rs
shared-core-rs/crates/hw-text/tests/: golden.rs
shared-core-rs/tests/fixtures/: phonetic.json
shared-models/: CLAUDE.md  models-catalog.json  schema.json
shared-prompts/: README.md
shared-types/: drizzle.types.ts  preset-descriptions.json
tools/: build-parakeet-engine.bat  build-sherpa-onnx.bat  build-windows-from-wsl.sh  sync-preset-descriptions.py  verify-preset-descriptions.py
tools/parakeet-engine/: CMakeLists.txt  main.cpp
(+985 files in other folders)
