[package]
name = "hw-license"
version = "0.1.0"
edition = "2021"
description = "License validation + usage state core. Calls back into a platform-provided KeyValueStore for persistence. Plain Rust; hw-core re-exports the callback as a UniFFI foreign trait."
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
