[package]
name = "hw-text"
version = "0.1.0"
edition = "2021"
description = "Pure, zero-I/O text logic: autocapitalize, smart spacing, text processing, vocab replacement, prompt assembly."
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
# The plan's constraint: no deps beyond regex for the text module.
regex = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
